{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 31,
  "lineage": "f0ca2e09-4c14-c73c-1c9c-e4f1a3c9dd64",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aa4bfcc4637f578c",
            "association_id": "eipassoc-0f68934d63c8d7f5d",
            "domain": "vpc",
            "id": "eipalloc-0aa4bfcc4637f578c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ea9543a2b4fc4edd",
            "private_dns": "ip-10-0-4-168.ec2.internal",
            "private_ip": "10.0.4.168",
            "public_dns": "ec2-52-21-49-17.compute-1.amazonaws.com",
            "public_ip": "52.21.49.17",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc_test_2"
            },
            "tags_all": {
              "Name": "vpc_test_2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702113017254:internet-gateway/igw-0bacc95f91e3470e9",
            "id": "igw-0bacc95f91e3470e9",
            "owner_id": "702113017254",
            "tags": {
              "Name": "igw-test"
            },
            "tags_all": {
              "Name": "igw-test"
            },
            "vpc_id": "vpc-080fb1ca41dc73cdc"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aa4bfcc4637f578c",
            "connectivity_type": "public",
            "id": "nat-0b67e26965f80ee7c",
            "network_interface_id": "eni-0ea9543a2b4fc4edd",
            "private_ip": "10.0.4.168",
            "public_ip": "52.21.49.17",
            "subnet_id": "subnet-021b53563be19c8b9",
            "tags": {
              "Name": "ngw-test"
            },
            "tags_all": {
              "Name": "ngw-test"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.pubsub1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetableprivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702113017254:route-table/rtb-0bd44e21d78a277ae",
            "id": "rtb-0bd44e21d78a277ae",
            "owner_id": "702113017254",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b67e26965f80ee7c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-prirt-test_2"
            },
            "tags_all": {
              "Name": "rt-prirt-test_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-080fb1ca41dc73cdc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.ngw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetablepublic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702113017254:route-table/rtb-0042940f762073388",
            "id": "rtb-0042940f762073388",
            "owner_id": "702113017254",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bacc95f91e3470e9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-pubrt-test_2"
            },
            "tags_all": {
              "Name": "rt-pubrt-test_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-080fb1ca41dc73cdc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prirtas1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5dbd4b393bc8874",
            "route_table_id": "rtb-0bd44e21d78a277ae",
            "subnet_id": "subnet-0a9a7b23a176c4399"
          },
          "dependencies": [
            "aws_nat_gateway.ngw",
            "aws_route_table.routetableprivate",
            "aws_subnet.prisub1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubrtas1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0a9e7846535e25f",
            "route_table_id": "rtb-0042940f762073388",
            "subnet_id": "subnet-021b53563be19c8b9"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.routetablepublic",
            "aws_subnet.pubsub1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702113017254:subnet/subnet-0a9a7b23a176c4399",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0a9a7b23a176c4399",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "702113017254",
            "tags": {
              "Name": "sub-test_vpc_2_private1"
            },
            "tags_all": {
              "Name": "sub-test_vpc_2_private1"
            },
            "vpc_id": "vpc-080fb1ca41dc73cdc"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702113017254:subnet/subnet-021b53563be19c8b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-021b53563be19c8b9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "702113017254",
            "tags": {
              "Name": "sub-test_vpc_2_public1"
            },
            "tags_all": {
              "Name": "sub-test_vpc_2_public1"
            },
            "vpc_id": "vpc-080fb1ca41dc73cdc"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702113017254:vpc/vpc-080fb1ca41dc73cdc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.4.0/22",
            "default_network_acl_id": "acl-007e0e06718b993a4",
            "default_route_table_id": "rtb-013ad665d16578624",
            "default_security_group_id": "sg-0c9cd846098f5b793",
            "dhcp_options_id": "dopt-cc5912b7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-080fb1ca41dc73cdc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-013ad665d16578624",
            "owner_id": "702113017254",
            "tags": {
              "Name": "vpc_test_2"
            },
            "tags_all": {
              "Name": "vpc_test_2"
            }
          }
        }
      ]
    }
  ]
}